Fix align counter of product detail movil

--- a/components/ProductDetailMobil/common/CheckoutProduct/CheckoutProduct.css
+++ b/components/ProductDetailMobil/common/CheckoutProduct/CheckoutProduct.css
@@ -59,4 +59,6 @@
 }
 #CheckoutProductMobil .count .count-counter {
   flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
